great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

.container {
	margin: 0 auto;
	width: 876px;
	padding-top: 20px;
}

nav {
	margin-bottom: 40px;
}

nav a {
	text-decoration: none;
	color: darkgray;
	margin-right: 50px;
}

nav a:hover {
	color: black;
}

nav img {
	margin-left: 20px;
}

header {
	margin-bottom: 40px;
}

.hero {
	display: inline-block;
	width: 250px;
	text-align: center;
	padding-left: 66px;
	margin-top: -100px
}

.hero-img {
	display:inline-block;
	width: 500px;
	padding-left: 250px;
}

.top-content {
	width: 49%;
	display: inline-block;
	margin-bottom: 40px;
	margin-top: 40px;
}

.bottom-content {
	display: inline-block;
	width: 32%;
	margin-top: 40px;
	margin-bottom: 40px;
}

address {
	margin-top: 40px;
}
footer {
	margin-top: 100px;
	text-align: center;
}

h1 {
	font-size: 72px;
}

.button {
	width: 200px;
	height: 30px;
	padding-top: 4px;
	/* margin-left: 103px; */
	border: 1px solid black;
	cursor: pointer;
}

